Fix horizontal scroll bar in manual search
* Try to fix horizontal scroll

* Use word-break instead

--- a/gui/slick/css/style.css
+++ b/gui/slick/css/style.css
@@ -2165,6 +2165,10 @@ span.true {
     /* green */
 }
 
+span.break-word {
+	word-break: break-all;
+}
+
 option.flag {
     padding-left: 35px;
     background-repeat: no-repeat;
